--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
     <div id="promoList" class="promoList">
       <h3 class="section-title">Promo Restoran</h3>
       <div class="promo">
-        <img src="assets\image\promo2.jpg" class="promoFoto" alt="sejarah">
+        <img src="assets\image\promo2.jpg" class="promoFoto">
         <div class="promo-info">
           <h2>Promo 10 rb</h2>
           <p>Paket Ayam Geprek+Nasi+Es Teh</p>
         </div>
       </div>
       <div class="promo">
-        <img src="assets\image\promo3.jpg" class="promoFoto" alt="sejarah">
+        <img src="assets\image\promo3.jpg" class="promoFoto" >
         <div class="promo-info">
           <h2>Promo Pelajar</h2>
           <p>Ayam geprek+Nasi+Es Teh</p>
         </div>
       </div>
       <div class="promo">
-        <img src="assets\image\promo1.jpg" class="promoFoto" alt="sejarah">
+        <img src="assets\image\promo1.jpg" class="promoFoto">
         <div class="promo-info">
           <h2>Promo Go Food</h2>
           <p>Semua Menu</p>
