--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
         </div>
       </div>
       <div class="promo">
-        <img src="assets\image\promo3.jpg" class="promoFoto" >
+        <img src="promo3.jpg" class="promoFoto" >
         <div class="promo-info">
           <h2>Promo Pelajar</h2>
           <p>Ayam geprek+Nasi+Es Teh</p>
         </div>
       </div>
       <div class="promo">
-        <img src="assets\image\promo1.jpg" class="promoFoto">
+        <img src="promo1.jpg" class="promoFoto">
         <div class="promo-info">
           <h2>Promo Go Food</h2>
           <p>Semua Menu</p>
