--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="promoList" class="promoList">
       <h3 class="section-title">Promo Restoran</h3>
       <div class="promo">
-        <img src="assets\image\promo2.jpg" class="promoFoto">
+        <img src="promo2.jpg" class="promoFoto">
         <div class="promo-info">
           <h2>Promo 10 rb</h2>
           <p>Paket Ayam Geprek+Nasi+Es Teh</p>
